--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
       rel="stylesheet"
    /> -->
-   <title>Project 1</title>
+   <title>معطاء</title>
    <meta name="description" content="" />
    <meta name="author" content="@Issaafalkattan" />
 </head>
